--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ h3{
 <center>
 <a target="_blank" href="test1.html">Start test 1</a>
 <a target="_blank" href="test2.html">Start test 2</a>
-<a target="_blank" href="#">Start test 3</a><br><br>
+<a target="_blank" href="https://www.youtube.com/channel/UCXEQhGTknEN9RlnIRNupmSg?sub_confirmation=1">Start test 3</a><br><br>
 <a target="_blank" href="#">Start test 4</a>
 <a target="_blank" href="#">Start test 5</a>
 <a target="_blank" href="#">Start test 6</a><br><br>
